<resources>
    <string name="app_name">BigMovies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="judul_filem">JUDUL FILEM</string>
    <string name="description">Description</string>
    <string name="director">Director</string>
    <string name="release_date">Release Date</string>
    <string name="cover_image">Cover Image</string>
    <string name="image_poster">Image Poster</string>
    <string name="change_language_settings">Open Setting</string>
    <string name="movies">Movies</string>
    <string name="tvshow">Tv Show</string>
    <string name="ratingfrom">/10</string>
    <string name="search_bar">Search</string>
    <string name="search_hint">Type Movie Title </string>
    <string name="search">Cari</string>
    <string name="retry">ulangi</string>
    <string name="no_result">Tidak ada Hasil</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_text">STAR WARS BANNER</string>
    <string name="empty_text">NO DATA</string>
    <string name="change_language">Change Language</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_desc">You will be reminded to open the application every 08.00 AM</string>
    <string name="release_reminder">Release Time Reminder</string>
    <string name="release_reminder_desc">You will be reminded every 07.00 if a new film is released</string>
    <string name="daily_text">You havent opened the application today, lets open it!</string>
    <string name="release_movie_today">has been released today!</string>
    <string name="Language">Language</string>
    <string name="tap_to_change">Tap to change language</string>
    <string name="notification">Notification</string>
    <string name="set_daily">Set Daily Reminder</string>
    <string name="set_movie">Set Movie Reminder</string>


</resources>
